# agent-enterprise-pack

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.uv  GETTING_STARTED.md  Makefile  README.md  cloudbuild-build-only.yaml  cloudbuild-ci.yaml  cloudbuild-deploy-vertex.yaml  cloudbuild-deploy.yaml  cloudbuild-publish.yaml  cloudbuild.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  pr-checks.yml  release.yml
core/: __init__.py
core/memory/: __init__.py  context_manager.py  memory_compressor.py  ttl_cache.py
core/observability/: __init__.py  alerting.py  cost_tracker.py  slo_definitions.py
core/reliability/: __init__.py  circuit_breaker.py  graceful_degradation.py  health_checks.py  retry_handler.py
core/security/: __init__.py  auth_middleware.py  input_validator.py  prompt_injection.py  rate_limiter.py
docs/: API_REFERENCE.md  BUILD_OPTIONS.md  CI_CD_OPTIONS_SUMMARY.md  CLOUD_BUILD_QUICK_START.md  CLOUD_BUILD_SETUP.md  CLOUD_BUILD_VS_GITHUB_ACTIONS.md  GCP_SETUP_MANUAL.md  GETTING_STARTED.md  QUICK_REFERENCE.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  VERTEX_AI_DEPLOYMENT.md  VERTEX_AI_VS_CLOUD_RUN.md
examples/: quick_start.py  test_agent.py
scripts/: build-image-cloud.sh  deploy-to-vertex-ai.sh  quick-test-local-only.sh  quick-test-minimal.sh  quick-test.sh  setup-cloud-build-prerequisites.sh  setup-cloud-build.sh  setup-gcp-github-actions.sh  test-on-gcp.sh
tests/: __init__.py  conftest.py  test_memory.py  test_observability.py  test_reliability.py  test_security.py
